--- a/index.html
+++ b/index.html
@@ -38,6 +38,30 @@
             cursor: pointer;
             border: 1px solid #000;
         }
+
+        #welcomeText {
+            margin-top: 30px;
+            max-width: 600px;
+            text-align: left;
+            font-size: 14px;
+            background-color: #f4f4f4;
+            padding: 15px;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        #welcomeText h2 {
+            margin-bottom: 10px;
+            font-size: 18px;
+        }
+
+        #welcomeText ul {
+            padding-left: 20px;
+        }
+
+        #welcomeText li {
+            margin-bottom: 5px;
+        }
     </style>
 </head>
 <body>
@@ -50,9 +74,23 @@
         <div id="currentColor" class="color-box" style="background-color: #000000;"></div>
     </div>
 
+    <!-- Welcome Text -->
+    <div id="welcomeText">
+        <h2>Welcome to Pixel Wars!</h2>
+        <p>This space is all about collaboration and creativity. Go wild, be quirky, or team up with others to create something amazing. The image you create here will become our server banner at the end of every month. You've got one pixel every 5 minutes, so make it count!</p>
+        <p>Here are some quick tips to get you started:</p>
+        <ul>
+            <li>Click on the canvas to place a pixel.</li>
+            <li>Right-click on the canvas to quickly pick a color that’s already been placed.</li>
+            <li>You can replace any pixel, no matter who placed it there!</li>
+        </ul>
+        <p>Game on and happy pixeling!</p>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
