--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Pixel Wars</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Verdana', sans-serif;
+            background-color: #2c2c2c; /* Dark background for a modern look */
+            color: #e0e0e0; /* Light text color for better readability */
             text-align: center;
             margin: 0;
             padding: 0;
@@ -17,12 +19,14 @@
 
         h1 {
             margin-top: 20px;
+            color: #ffcc00; /* A warmer yellow color to add contrast */
         }
 
         #pixelCanvas {
-            border: 1px solid #000; /* Adds border to the canvas */
+            border: 1px solid #555; /* A softer border color */
             margin-top: 20px;
             cursor: crosshair;
+            background-color: #ffffff; /* Keep the canvas white */
         }
 
         #colorOptions {
@@ -36,7 +40,7 @@
             width: 30px;
             height: 30px;
             cursor: pointer;
-            border: 1px solid #000;
+            border: 2px solid #555; /* Slightly darker border for color boxes */
         }
 
         #welcomeText {
@@ -44,15 +48,17 @@
             max-width: 600px;
             text-align: left;
             font-size: 14px;
-            background-color: #f4f4f4;
+            background-color: #3c3c3c; /* A slightly lighter background for text */
             padding: 15px;
             border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Softer shadow */
+            color: #e0e0e0; /* Light text color */
         }
 
         #welcomeText h2 {
             margin-bottom: 10px;
             font-size: 18px;
+            color: #ffcc00; /* Matching the header color */
         }
 
         #welcomeText ul {
@@ -90,8 +96,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
-
-
-
-
