--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <style>
         body {
             font-family: 'Verdana', sans-serif;
-            background-color: #2c2c2c; /* Dark background for a modern look */
-            color: #e0e0e0; /* Light text color for better readability */
+            background-color: #2c2c2c;
+            color: #e0e0e0;
             text-align: center;
             margin: 0;
             padding: 0;
@@ -19,14 +19,14 @@
 
         h1 {
             margin-top: 20px;
-            color: #ffcc00; /* A warmer yellow color to add contrast */
+            color: #ffcc00;
         }
 
         #pixelCanvas {
-            border: 1px solid #555; /* A softer border color */
+            border: 1px solid #555;
             margin-top: 20px;
             cursor: crosshair;
-            background-color: #ffffff; /* Keep the canvas white */
+            background-color: #ffffff;
         }
 
         #colorOptions {
@@ -40,7 +40,21 @@
             width: 30px;
             height: 30px;
             cursor: pointer;
-            border: 2px solid #555; /* Slightly darker border for color boxes */
+            border: 2px solid #555;
+        }
+
+        #accessSection {
+            margin-top: 20px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        #accessSection input {
+            padding: 5px;
+            margin-top: 10px;
+            border-radius: 5px;
+            border: 1px solid #555;
         }
 
         #welcomeText {
@@ -48,17 +62,17 @@
             max-width: 600px;
             text-align: left;
             font-size: 14px;
-            background-color: #3c3c3c; /* A slightly lighter background for text */
+            background-color: #3c3c3c;
             padding: 15px;
             border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Softer shadow */
-            color: #e0e0e0; /* Light text color */
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+            color: #e0e0e0;
         }
 
         #welcomeText h2 {
             margin-bottom: 10px;
             font-size: 18px;
-            color: #ffcc00; /* Matching the header color */
+            color: #ffcc00;
         }
 
         #welcomeText ul {
@@ -80,6 +94,13 @@
         <div id="currentColor" class="color-box" style="background-color: #000000;"></div>
     </div>
 
+    <!-- Access Code Input -->
+    <div id="accessSection">
+        <label for="userInput">Enter Access Code:</label>
+        <input type="text" id="userInput" placeholder="Enter your code here">
+        <button id="submitCode">Submit</button>
+    </div>
+
     <!-- Welcome Text -->
     <div id="welcomeText">
         <h2>Welcome to Pixel Wars!</h2>
@@ -87,7 +108,7 @@
         <p>Here are some quick tips to get you started:</p>
         <ul>
             <li>Click on the canvas to place a pixel.</li>
-            <li>Right-click on the canvas to quickly pick a color that’s already been placed.</li>
+            <li>Middle-click on the canvas to quickly pick a color that’s already been placed.</li>
             <li>You can replace any pixel, no matter who placed it there!</li>
         </ul>
         <p>Game on and happy pixeling!</p>
