--- a/index.html
+++ b/index.html
@@ -25,8 +25,27 @@
         #pixelCanvas {
             border: 1px solid #555;
             margin-top: 20px;
-            cursor: crosshair;
+            cursor: not-allowed; /* Change cursor style to indicate it's disabled */
             background-color: #ffffff;
+            pointer-events: none; /* Disable interactions */
+        }
+
+        #canvasContainer {
+            position: relative; /* Allow absolute positioning of overlay */
+        }
+
+        .overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent overlay */
+            color: white;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 20px;
         }
 
         #colorOptions {
@@ -86,7 +105,10 @@
 </head>
 <body>
     <h1>Pixel Wars</h1>
-    <canvas id="pixelCanvas" width="500" height="500"></canvas>
+    <div id="canvasContainer">
+        <canvas id="pixelCanvas" width="500" height="500"></canvas>
+        <div class="overlay" id="overlay">Enter Access Code to Unlock Canvas</div> <!-- Overlay for locked state -->
+    </div>
     
     <!-- Color Picker Input -->
     <div id="colorOptions">
