Added persistent canvas state and updated access code overlay

--- a/index.html
+++ b/index.html
@@ -101,11 +101,6 @@
         #welcomeText li {
             margin-bottom: 5px;
         }
-
-        #adminMessage {
-            color: red;
-            margin-top: 10px;
-        }
     </style>
 </head>
 <body>
@@ -123,10 +118,10 @@
 
     <!-- Access Code Input -->
     <div id="accessSection">
-        <label for="userInput">Enter Access Code or Admin Password:</label>
+        <label for="userInput">Enter Access Code:</label>
         <input type="text" id="userInput" placeholder="Enter your code here">
         <button id="submitCode">Submit</button>
-        <p id="adminMessage"></p>
+        <div id="adminMessage" style="color: red;"></div> <!-- Message for incorrect input -->
     </div>
 
     <!-- Welcome Text -->
