--- a/index.html
+++ b/index.html
@@ -101,6 +101,12 @@
         #welcomeText li {
             margin-bottom: 5px;
         }
+
+        #countdown {
+            margin-left: 20px;
+            font-size: 20px;
+            color: #ffcc00;
+        }
     </style>
 </head>
 <body>
@@ -114,6 +120,7 @@
     <div id="colorOptions">
         <input type="color" id="colorPicker" value="#000000">
         <div id="currentColor" class="color-box" style="background-color: #000000;"></div>
+        <span id="countdown">Cooldown: 0:00</span> <!-- Countdown timer display -->
     </div>
 
     <!-- Access Code Input -->
@@ -121,7 +128,6 @@
         <label for="userInput">Enter Access Code:</label>
         <input type="text" id="userInput" placeholder="Enter your code here">
         <button id="submitCode">Submit</button>
-        <div id="adminMessage" style="color: red;"></div> <!-- Message for incorrect input -->
     </div>
 
     <!-- Welcome Text -->
