Added canvas state saving and loading, fixed pixel placement functionality v9.0

--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@
         #pixelCanvas {
             border: 1px solid #555;
             margin-top: 20px;
-            cursor: not-allowed; /* Change cursor style to indicate it's disabled */
+            cursor: pointer; /* Change cursor style to indicate it's enabled */
             background-color: #ffffff;
-            pointer-events: none; /* Disable interactions */
         }
 
         #canvasContainer {
