--- a/index.html
+++ b/index.html
@@ -164,13 +164,14 @@
         // Function to place a pixel on the canvas
         function placePixel(x, y) {
             if (isCanvasUnlocked && !cooldown) {
-                // Adjusting the coordinates to ensure pixel placement
-                ctx.fillStyle = currentColor;
-                ctx.fillRect(x, y, 1, 1);
-                pixelsPlaced++;
+                if (pixelsPlaced < 5) {
+                    ctx.fillStyle = currentColor;
+                    ctx.fillRect(x, y, 10, 10); // Each pixel is 10x10
+                    pixelsPlaced++;
 
-                if (pixelsPlaced >= 5) {
-                    startCooldown(); // Start cooldown when the 5th pixel is placed
+                    if (pixelsPlaced === 5) {
+                        startCooldown(); // Start cooldown when the 5th pixel is placed
+                    }
                 }
             }
         }
@@ -196,11 +197,9 @@
 
         // Function to handle mouse click events on the canvas
         canvas.addEventListener('click', (e) => {
-            if (!isCanvasUnlocked) return; // Prevent clicks if canvas is locked
-            
             const rect = canvas.getBoundingClientRect();
-            const x = Math.floor(e.clientX - rect.left);
-            const y = Math.floor(e.clientY - rect.top);
+            const x = Math.floor((e.clientX - rect.left));
+            const y = Math.floor((e.clientY - rect.top));
             placePixel(x, y);
             saveCanvasState(); // Save the canvas state after placing a pixel
         });
