--- a/index.html
+++ b/index.html
@@ -100,6 +100,11 @@
         #welcomeText li {
             margin-bottom: 5px;
         }
+
+        #countdown {
+            color: #ffcc00;
+            margin-left: 10px;
+        }
     </style>
 </head>
 <body>
@@ -113,7 +118,7 @@
     <div id="colorOptions">
         <input type="color" id="colorPicker" value="#000000">
         <div id="currentColor" class="color-box" style="background-color: #000000;"></div>
-        <div id="countdown" style="color: #ffcc00; margin-left: 10px;">Cooldown: 0:00</div>
+        <div id="countdown">Cooldown: 0:00</div>
     </div>
 
     <!-- Access Code Input -->
@@ -164,9 +169,16 @@
         // Function to place a pixel on the canvas
         function placePixel(x, y) {
             if (isCanvasUnlocked && !cooldown) {
-                if (pixelsPlaced < 5) {
+                const gridX = Math.floor(x / 10) * 10; // Snap to grid
+                const gridY = Math.floor(y / 10) * 10; // Snap to grid
+
+                // Check if the pixel at grid position is already painted
+                const imageData = ctx.getImageData(gridX, gridY, 10, 10);
+                const pixelData = imageData.data;
+
+                if (pixelData[3] === 0) { // Check if the pixel is transparent (invisible)
                     ctx.fillStyle = currentColor;
-                    ctx.fillRect(x, y, 50, 50); // Each pixel is 10x10
+                    ctx.fillRect(gridX, gridY, 10, 10); // Each pixel is 10x10
                     pixelsPlaced++;
 
                     if (pixelsPlaced === 5) {
@@ -231,20 +243,26 @@
             }
         }
 
-        // Save current canvas state
+        // Save the canvas state
         function saveCanvasState() {
-            const canvasData = canvas.toDataURL();
-            localStorage.setItem('pixelCanvasState', canvasData);
+            const canvasDataURL = canvas.toDataURL();
+            localStorage.setItem('pixelCanvasState', canvasDataURL);
         }
 
-        // Call loadCanvasState on page load
-        window.onload = loadCanvasState;
+        // Prevent overlapping pixels by creating an invisible grid
+        const createInvisibleGrid = () => {
+            ctx.fillStyle = 'rgba(255, 255, 255, 0.0)'; // Transparent fill
+            for (let x = 0; x < canvas.width; x += 10) {
+                for (let y = 0; y < canvas.height; y += 10) {
+                    ctx.fillRect(x, y, 10, 10);
+                }
+            }
+        };
 
-        // Display the current color in the color box
-        currentColorBox.style.backgroundColor = currentColor;
-
-        // Prevent default right-click context menu
-        canvas.addEventListener('contextmenu', (e) => e.preventDefault());
+        // Create the invisible grid on canvas load
+        window.onload = () => {
+            createInvisibleGrid();
+        };
     </script>
 </body>
 </html>
