--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
         #pixelCanvas {
             border: 1px solid #555;
             margin-top: 20px;
-            cursor: pointer; /* Change cursor style to indicate it's enabled */
+            cursor: pointer;
             background-color: #ffffff;
         }
 
         #canvasContainer {
-            position: relative; /* Allow absolute positioning of overlay */
+            position: relative;
         }
 
         .overlay {
@@ -39,7 +39,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent overlay */
+            background-color: rgba(0, 0, 0, 0.5);
             color: white;
             display: flex;
             justify-content: center;
@@ -75,6 +75,17 @@
             border: 1px solid #555;
         }
 
+        #wipeCanvasButton {
+            margin-top: 20px;
+            padding: 10px 15px;
+            border: none;
+            border-radius: 5px;
+            background-color: #ff5555;
+            color: #ffffff;
+            cursor: pointer;
+            display: none; /* Initially hidden */
+        }
+
         #welcomeText {
             margin-top: 30px;
             max-width: 600px;
@@ -100,35 +111,29 @@
         #welcomeText li {
             margin-bottom: 5px;
         }
-
-        #countdown {
-            color: #ffcc00;
-            margin-left: 10px;
-        }
     </style>
 </head>
 <body>
     <h1>Pixel Wars</h1>
     <div id="canvasContainer">
         <canvas id="pixelCanvas" width="500" height="500"></canvas>
-        <div class="overlay" id="overlay">Enter Access Code to Unlock Canvas</div> <!-- Overlay for locked state -->
+        <div class="overlay" id="overlay">Enter Access Code to Unlock Canvas</div>
     </div>
     
-    <!-- Color Picker Input -->
     <div id="colorOptions">
         <input type="color" id="colorPicker" value="#000000">
         <div id="currentColor" class="color-box" style="background-color: #000000;"></div>
-        <div id="countdown">Cooldown: 0:00</div>
+        <div id="countdown" style="color: #ffcc00; margin-left: 10px;">Cooldown: 0:00</div>
     </div>
 
-    <!-- Access Code Input -->
     <div id="accessSection">
         <label for="userInput">Enter Access Code:</label>
         <input type="text" id="userInput" placeholder="Enter your code here">
         <button id="submitCode">Submit</button>
     </div>
 
-    <!-- Welcome Text -->
+    <button id="wipeCanvasButton">Wipe Canvas</button>
+
     <div id="welcomeText">
         <h2>Welcome to Pixel Wars!</h2>
         <p>This space is all about collaboration and creativity. Go wild, be quirky, or team up with others to create something amazing. The image you create here will become our server banner at the end of every month. You've got one pixel every 5 minutes, so make it count!</p>
@@ -150,6 +155,7 @@
         const countdownDisplay = document.getElementById('countdown');
         const submitCodeButton = document.getElementById('submitCode');
         const userInput = document.getElementById('userInput');
+        const wipeCanvasButton = document.getElementById('wipeCanvasButton');
 
         let isCanvasUnlocked = false;
         let cooldown = false;
@@ -160,6 +166,9 @@
         // Initialize pixel color
         let currentColor = colorPicker.value;
 
+        // Array to keep track of placed pixels
+        const placedPixels = [];
+
         // Update the current color display
         colorPicker.addEventListener('input', (e) => {
             currentColor = e.target.value;
@@ -169,16 +178,16 @@
         // Function to place a pixel on the canvas
         function placePixel(x, y) {
             if (isCanvasUnlocked && !cooldown) {
-                const gridX = Math.floor(x / 10) * 10; // Snap to grid
-                const gridY = Math.floor(y / 10) * 10; // Snap to grid
+                // Calculate grid position
+                const gridX = Math.floor(x / 50) * 50;
+                const gridY = Math.floor(y / 50) * 50;
+                const pixelKey = `${gridX},${gridY}`;
 
-                // Check if the pixel at grid position is already painted
-                const imageData = ctx.getImageData(gridX, gridY, 10, 10);
-                const pixelData = imageData.data;
-
-                if (pixelData[3] === 0) { // Check if the pixel is transparent (invisible)
+                // Check if the pixel position is already occupied
+                if (!placedPixels.includes(pixelKey)) {
                     ctx.fillStyle = currentColor;
-                    ctx.fillRect(gridX, gridY, 10, 10); // Each pixel is 10x10
+                    ctx.fillRect(gridX, gridY, 50, 50); // Set pixel size to 50x50
+                    placedPixels.push(pixelKey);
                     pixelsPlaced++;
 
                     if (pixelsPlaced === 5) {
@@ -224,6 +233,7 @@
             if (code === "Itsameamario1") {
                 overlay.style.display = 'none'; // Unlock the canvas
                 isCanvasUnlocked = true; // Set the flag to true
+                wipeCanvasButton.style.display = 'block'; // Show the wipe button
                 userInput.value = ''; // Clear the input field
                 loadCanvasState(); // Load previous canvas state
             } else {
@@ -231,38 +241,32 @@
             }
         });
 
-        // Load previous canvas state
+        // Function to wipe the canvas
+        wipeCanvasButton.addEventListener('click', () => {
+            if (confirm("Are you sure you want to wipe the canvas? This action cannot be undone.")) {
+                ctx.clearRect(0, 0, canvas.width, canvas.height); // Clear the canvas
+                placedPixels.length = 0; // Clear the placed pixels array
+                saveCanvasState(); // Save the cleared canvas state
+            }
+        });
+
+        // Load previous canvas state from local storage
         function loadCanvasState() {
-            const savedCanvas = localStorage.getItem('pixelCanvasState');
-            if (savedCanvas) {
-                const image = new Image();
-                image.src = savedCanvas;
-                image.onload = () => {
-                    ctx.drawImage(image, 0, 0);
-                };
+            const savedPixels = JSON.parse(localStorage.getItem('placedPixels'));
+            if (savedPixels) {
+                savedPixels.forEach(pixel => {
+                    const [gridX, gridY] = pixel.split(',').map(Number);
+                    ctx.fillStyle = "#000000"; // Use a default color or saved color
+                    ctx.fillRect(gridX, gridY, 50, 50);
+                    placedPixels.push(pixel);
+                });
             }
         }
 
-        // Save the canvas state
+        // Save the current canvas state to local storage
         function saveCanvasState() {
-            const canvasDataURL = canvas.toDataURL();
-            localStorage.setItem('pixelCanvasState', canvasDataURL);
+            localStorage.setItem('placedPixels', JSON.stringify(placedPixels));
         }
-
-        // Prevent overlapping pixels by creating an invisible grid
-        const createInvisibleGrid = () => {
-            ctx.fillStyle = 'rgba(255, 255, 255, 0.0)'; // Transparent fill
-            for (let x = 0; x < canvas.width; x += 10) {
-                for (let y = 0; y < canvas.height; y += 10) {
-                    ctx.fillRect(x, y, 10, 10);
-                }
-            }
-        };
-
-        // Create the invisible grid on canvas load
-        window.onload = () => {
-            createInvisibleGrid();
-        };
     </script>
 </body>
 </html>
