--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
 
         // Array to keep track of placed pixels
         const placedPixels = [];
+        const pixelSize = 10; // Adjusted pixel size
 
         // Update the current color display
         colorPicker.addEventListener('input', (e) => {
@@ -179,14 +180,14 @@
         function placePixel(x, y) {
             if (isCanvasUnlocked && !cooldown) {
                 // Calculate grid position
-                const gridX = Math.floor(x / 50) * 50;
-                const gridY = Math.floor(y / 50) * 50;
+                const gridX = Math.floor(x / pixelSize) * pixelSize;
+                const gridY = Math.floor(y / pixelSize) * pixelSize;
                 const pixelKey = `${gridX},${gridY}`;
 
                 // Check if the pixel position is already occupied
                 if (!placedPixels.includes(pixelKey)) {
                     ctx.fillStyle = currentColor;
-                    ctx.fillRect(gridX, gridY, 50, 50); // Set pixel size to 50x50
+                    ctx.fillRect(gridX, gridY, pixelSize, pixelSize); // Set pixel size to pixelSize x pixelSize
                     placedPixels.push(pixelKey);
                     pixelsPlaced++;
 
@@ -243,30 +244,31 @@
 
         // Function to wipe the canvas
         wipeCanvasButton.addEventListener('click', () => {
-            if (confirm("Are you sure you want to wipe the canvas? This action cannot be undone.")) {
-                ctx.clearRect(0, 0, canvas.width, canvas.height); // Clear the canvas
-                placedPixels.length = 0; // Clear the placed pixels array
-                saveCanvasState(); // Save the cleared canvas state
-            }
+            ctx.clearRect(0, 0, canvas.width, canvas.height);
+            placedPixels.length = 0; // Clear placed pixels
+            alert('Canvas wiped! You can start placing pixels again.');
         });
 
-        // Load previous canvas state from local storage
+        // Function to save the canvas state in local storage
+        function saveCanvasState() {
+            const canvasData = canvas.toDataURL();
+            localStorage.setItem('canvasData', canvasData);
+        }
+
+        // Function to load the canvas state from local storage
         function loadCanvasState() {
-            const savedPixels = JSON.parse(localStorage.getItem('placedPixels'));
-            if (savedPixels) {
-                savedPixels.forEach(pixel => {
-                    const [gridX, gridY] = pixel.split(',').map(Number);
-                    ctx.fillStyle = "#000000"; // Use a default color or saved color
-                    ctx.fillRect(gridX, gridY, 50, 50);
-                    placedPixels.push(pixel);
-                });
+            const canvasData = localStorage.getItem('canvasData');
+            if (canvasData) {
+                const img = new Image();
+                img.onload = () => {
+                    ctx.drawImage(img, 0, 0);
+                };
+                img.src = canvasData;
             }
         }
 
-        // Save the current canvas state to local storage
-        function saveCanvasState() {
-            localStorage.setItem('placedPixels', JSON.stringify(placedPixels));
-        }
+        // Load the canvas state when the page loads
+        window.onload = loadCanvasState;
     </script>
 </body>
 </html>
