--- a/index.html
+++ b/index.html
@@ -176,6 +176,24 @@
             currentColorBox.style.backgroundColor = currentColor;
         });
 
+        // Load cooldown state from local storage
+        function loadCooldownState() {
+            const savedCooldownEnd = localStorage.getItem('cooldownEnd');
+            console.log("Saved Cooldown End:", savedCooldownEnd); // Debugging message
+            
+            if (savedCooldownEnd) {
+                const now = new Date().getTime();
+                const cooldownEnd = parseInt(savedCooldownEnd, 10);
+                console.log("Current Time:", now, "Cooldown End Time:", cooldownEnd); // Debugging message
+
+                if (now < cooldownEnd) {
+                    const timeLeft = Math.floor((cooldownEnd - now) / 1000);
+                    console.log("Time Left on Cooldown:", timeLeft); // Debugging message
+                    startCooldown(timeLeft); // Restore the countdown timer
+                }
+            }
+        }
+
         // Function to place a pixel on the canvas
         function placePixel(x, y) {
             if (isCanvasUnlocked && !cooldown) {
@@ -199,9 +217,12 @@
         }
 
         // Function to start the cooldown
-        function startCooldown() {
+        function startCooldown(timeLeft = cooldownTime) {
             cooldown = true;
-            let timeLeft = cooldownTime;
+            const cooldownEnd = new Date().getTime() + (timeLeft * 1000);
+            console.log("New Cooldown End:", cooldownEnd); // Debugging message
+            localStorage.setItem('cooldownEnd', cooldownEnd);
+
             countdownDisplay.textContent = `Cooldown: ${Math.floor(timeLeft / 60)}:${(timeLeft % 60).toString().padStart(2, '0')}`;
 
             countdownTimer = setInterval(() => {
@@ -213,9 +234,16 @@
                     cooldown = false;
                     pixelsPlaced = 0; // Reset the pixel count
                     countdownDisplay.textContent = `Cooldown: 0:00`;
+                    localStorage.removeItem('cooldownEnd'); // Clear cooldown end time
                 }
             }, 1000);
         }
+
+        // Call loadCooldownState on page load
+        window.onload = () => {
+            loadCanvasState(); // Load the canvas state
+            loadCooldownState(); // Load the cooldown state
+        };
 
         // Function to handle mouse click events on the canvas
         canvas.addEventListener('click', (e) => {
@@ -223,52 +251,58 @@
             const x = Math.floor((e.clientX - rect.left));
             const y = Math.floor((e.clientY - rect.top));
             placePixel(x, y);
-            saveCanvasState(); // Save the canvas state after placing a pixel
         });
 
-        // Function to handle access code submission
-        submitCodeButton.addEventListener('click', () => {
-            const code = userInput.value;
+        // Function to handle middle-click to pick color
+        canvas.addEventListener('mousedown', (e) => {
+            if (e.button === 1) { // Middle-click
+                const rect = canvas.getBoundingClientRect();
+                const x = Math.floor((e.clientX - rect.left));
+                const y = Math.floor((e.clientY - rect.top));
 
-            // Check if the entered code is correct
-            if (code === "Itsameamario1") {
-                overlay.style.display = 'none'; // Unlock the canvas
-                isCanvasUnlocked = true; // Set the flag to true
-                wipeCanvasButton.style.display = 'block'; // Show the wipe button
-                userInput.value = ''; // Clear the input field
-                loadCanvasState(); // Load previous canvas state
+                const gridX = Math.floor(x / pixelSize) * pixelSize;
+                const gridY = Math.floor(y / pixelSize) * pixelSize;
+                const pixelKey = `${gridX},${gridY}`;
+
+                if (placedPixels.includes(pixelKey)) {
+                    // Get the pixel color at the clicked position
+                    const pixelData = ctx.getImageData(gridX, gridY, pixelSize, pixelSize).data;
+                    const color = `rgb(${pixelData[0]}, ${pixelData[1]}, ${pixelData[2]})`;
+                    console.log("Picked Color:", color); // Debugging message
+                    currentColor = color;
+                    currentColorBox.style.backgroundColor = currentColor;
+                    colorPicker.value = rgbToHex(color);
+                }
+            }
+        });
+
+        // Function to convert RGB to HEX
+        function rgbToHex(rgb) {
+            const rgbValues = rgb.match(/\d+/g).map(x => parseInt(x));
+            return `#${((1 << 24) + (rgbValues[0] << 16) + (rgbValues[1] << 8) + rgbValues[2]).toString(16).slice(1)}`;
+        }
+
+        // Event listener for the submit button
+        submitCodeButton.addEventListener('click', () => {
+            const inputCode = userInput.value;
+            if (inputCode === 'unlock') { // Change to your desired access code
+                isCanvasUnlocked = true;
+                overlay.style.display = 'none'; // Hide overlay
+                userInput.value = ''; // Clear input
+                wipeCanvasButton.style.display = 'inline'; // Show wipe button
+                console.log("Canvas Unlocked"); // Debugging message
             } else {
                 alert('Incorrect access code. Please try again.');
+                console.log("Incorrect Code Entered:", inputCode); // Debugging message
             }
         });
 
-        // Function to wipe the canvas
+        // Event listener for wipe canvas button
         wipeCanvasButton.addEventListener('click', () => {
             ctx.clearRect(0, 0, canvas.width, canvas.height);
-            placedPixels.length = 0; // Clear placed pixels
-            alert('Canvas wiped! You can start placing pixels again.');
+            placedPixels.length = 0; // Reset placed pixels
+            console.log("Canvas Wiped"); // Debugging message
         });
-
-        // Function to save the canvas state in local storage
-        function saveCanvasState() {
-            const canvasData = canvas.toDataURL();
-            localStorage.setItem('canvasData', canvasData);
-        }
-
-        // Function to load the canvas state from local storage
-        function loadCanvasState() {
-            const canvasData = localStorage.getItem('canvasData');
-            if (canvasData) {
-                const img = new Image();
-                img.onload = () => {
-                    ctx.drawImage(img, 0, 0);
-                };
-                img.src = canvasData;
-            }
-        }
-
-        // Load the canvas state when the page loads
-        window.onload = loadCanvasState;
     </script>
 </body>
 </html>
