--- a/index.html
+++ b/index.html
@@ -176,24 +176,6 @@
             currentColorBox.style.backgroundColor = currentColor;
         });
 
-        // Load cooldown state from local storage
-        function loadCooldownState() {
-            const savedCooldownEnd = localStorage.getItem('cooldownEnd');
-            console.log("Saved Cooldown End:", savedCooldownEnd); // Debugging message
-            
-            if (savedCooldownEnd) {
-                const now = new Date().getTime();
-                const cooldownEnd = parseInt(savedCooldownEnd, 10);
-                console.log("Current Time:", now, "Cooldown End Time:", cooldownEnd); // Debugging message
-
-                if (now < cooldownEnd) {
-                    const timeLeft = Math.floor((cooldownEnd - now) / 1000);
-                    console.log("Time Left on Cooldown:", timeLeft); // Debugging message
-                    startCooldown(timeLeft); // Restore the countdown timer
-                }
-            }
-        }
-
         // Function to place a pixel on the canvas
         function placePixel(x, y) {
             if (isCanvasUnlocked && !cooldown) {
@@ -220,30 +202,27 @@
         function startCooldown(timeLeft = cooldownTime) {
             cooldown = true;
             const cooldownEnd = new Date().getTime() + (timeLeft * 1000);
-            console.log("New Cooldown End:", cooldownEnd); // Debugging message
             localStorage.setItem('cooldownEnd', cooldownEnd);
-
-            countdownDisplay.textContent = `Cooldown: ${Math.floor(timeLeft / 60)}:${(timeLeft % 60).toString().padStart(2, '0')}`;
+            updateCountdownDisplay(timeLeft);
 
             countdownTimer = setInterval(() => {
                 timeLeft--;
-                countdownDisplay.textContent = `Cooldown: ${Math.floor(timeLeft / 60)}:${(timeLeft % 60).toString().padStart(2, '0')}`;
+                updateCountdownDisplay(timeLeft);
 
                 if (timeLeft <= 0) {
                     clearInterval(countdownTimer);
                     cooldown = false;
                     pixelsPlaced = 0; // Reset the pixel count
-                    countdownDisplay.textContent = `Cooldown: 0:00`;
+                    countdownDisplay.textContent = 'Cooldown: 0:00';
                     localStorage.removeItem('cooldownEnd'); // Clear cooldown end time
                 }
             }, 1000);
         }
 
-        // Call loadCooldownState on page load
-        window.onload = () => {
-            loadCanvasState(); // Load the canvas state
-            loadCooldownState(); // Load the cooldown state
-        };
+        // Function to update countdown display
+        function updateCountdownDisplay(timeLeft) {
+            countdownDisplay.textContent = `Cooldown: ${Math.floor(timeLeft / 60)}:${(timeLeft % 60).toString().padStart(2, '0')}`;
+        }
 
         // Function to handle mouse click events on the canvas
         canvas.addEventListener('click', (e) => {
@@ -251,58 +230,65 @@
             const x = Math.floor((e.clientX - rect.left));
             const y = Math.floor((e.clientY - rect.top));
             placePixel(x, y);
+            saveCanvasState(); // Save the canvas state after placing a pixel
         });
 
-        // Function to handle middle-click to pick color
-        canvas.addEventListener('mousedown', (e) => {
-            if (e.button === 1) { // Middle-click
-                const rect = canvas.getBoundingClientRect();
-                const x = Math.floor((e.clientX - rect.left));
-                const y = Math.floor((e.clientY - rect.top));
-
-                const gridX = Math.floor(x / pixelSize) * pixelSize;
-                const gridY = Math.floor(y / pixelSize) * pixelSize;
-                const pixelKey = `${gridX},${gridY}`;
-
-                if (placedPixels.includes(pixelKey)) {
-                    // Get the pixel color at the clicked position
-                    const pixelData = ctx.getImageData(gridX, gridY, pixelSize, pixelSize).data;
-                    const color = `rgb(${pixelData[0]}, ${pixelData[1]}, ${pixelData[2]})`;
-                    console.log("Picked Color:", color); // Debugging message
-                    currentColor = color;
-                    currentColorBox.style.backgroundColor = currentColor;
-                    colorPicker.value = rgbToHex(color);
-                }
-            }
-        });
-
-        // Function to convert RGB to HEX
-        function rgbToHex(rgb) {
-            const rgbValues = rgb.match(/\d+/g).map(x => parseInt(x));
-            return `#${((1 << 24) + (rgbValues[0] << 16) + (rgbValues[1] << 8) + rgbValues[2]).toString(16).slice(1)}`;
-        }
-
-        // Event listener for the submit button
+        // Function to handle access code submission
         submitCodeButton.addEventListener('click', () => {
-            const inputCode = userInput.value;
-            if (inputCode === 'unlock') { // Change to your desired access code
-                isCanvasUnlocked = true;
-                overlay.style.display = 'none'; // Hide overlay
-                userInput.value = ''; // Clear input
-                wipeCanvasButton.style.display = 'inline'; // Show wipe button
-                console.log("Canvas Unlocked"); // Debugging message
+            const code = userInput.value;
+
+            // Check if the entered code is correct
+            if (code === "Itsameamario1") {
+                overlay.style.display = 'none'; // Unlock the canvas
+                isCanvasUnlocked = true; // Set the flag to true
+                wipeCanvasButton.style.display = 'block'; // Show the wipe button
+                userInput.value = ''; // Clear the input field
+                loadCanvasState(); // Load previous canvas state
             } else {
                 alert('Incorrect access code. Please try again.');
-                console.log("Incorrect Code Entered:", inputCode); // Debugging message
             }
         });
 
-        // Event listener for wipe canvas button
+        // Function to wipe the canvas
         wipeCanvasButton.addEventListener('click', () => {
-            ctx.clearRect(0, 0, canvas.width, canvas.height);
-            placedPixels.length = 0; // Reset placed pixels
-            console.log("Canvas Wiped"); // Debugging message
+            if (confirm("Are you sure you want to wipe the canvas? This action cannot be undone.")) {
+                ctx.clearRect(0, 0, canvas.width, canvas.height);
+                placedPixels.length = 0; // Clear the placed pixels array
+                localStorage.removeItem('canvasState'); // Clear the canvas state from local storage
+            }
         });
+
+        // Load the saved canvas state from local storage
+        function loadCanvasState() {
+            const savedState = localStorage.getItem('canvasState');
+            if (savedState) {
+                const pixels = JSON.parse(savedState);
+                pixels.forEach(pixel => {
+                    const [x, y, color] = pixel;
+                    ctx.fillStyle = color;
+                    ctx.fillRect(x, y, pixelSize, pixelSize);
+                    placedPixels.push(`${x},${y}`);
+                });
+            }
+
+            // Load cooldown state
+            const cooldownEnd = localStorage.getItem('cooldownEnd');
+            if (cooldownEnd) {
+                const timeLeft = Math.max(Math.round((cooldownEnd - new Date().getTime()) / 1000), 0);
+                if (timeLeft > 0) {
+                    startCooldown(timeLeft);
+                }
+            }
+        }
+
+        // Save the current state of the canvas to local storage
+        function saveCanvasState() {
+            const canvasState = placedPixels.map(pixelKey => {
+                const [x, y] = pixelKey.split(',').map(Number);
+                return [x, y, ctx.getImageData(x, y, pixelSize, pixelSize).data]; // Get pixel color
+            });
+            localStorage.setItem('canvasState', JSON.stringify(canvasState));
+        }
     </script>
 </body>
 </html>
